--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,5 +10,13 @@ body {
   padding: 0;
   overflow-x: hidden;
 }
+
+p {
+  margin-bottom: 0.5rem;
+}
+a {
+  color: gray;
+  text-decoration: underline;
+}
   
 
